--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/veraBytte/shellby-quotes.git"
+  },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Bryan Andres Vera Garcia",
+  "license": "MIT"
 }
